--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-2.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-2.htm
@@ -187,9 +187,7 @@
     </ol>
 
     </div>
-
     
-<div class="copyright"> 
   <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
   <p> <a href="../concepts/concepts-3.htm">Java 
     projects</a><br>
@@ -199,16 +197,28 @@
     classpath</a><br>
     <br>
   </p>
-  <p> <img src="../images/ngrelt.gif" alt="Related tasks" border=0 height=27 width=159> 
+  <p> <img src="../images/ngrelt.gif" alt="Related tasks" /> 
   </p>
   <p><a href="../tasks/tasks-110.htm">Working with build paths</a><br>
     <a href="../tasks/tasks-119.htm">Working with JREs</a><br>
     <br>
   </p>
-  <p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif"
-          alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border=0/> 
-    </a> </p>
-</div>
+
+    <p>
+      <img src="../images/ngrelr.gif" alt="Related reference" />
+    </p>
+
+    <p>
+      <a href="../reference/ref-19.htm">JRE Installations Preferences</a><br />
+      <a href="../reference/ref-preferences-new-project.htm">New Project Preferences</a><br />
+      <a href="../reference/ref-21.htm">Java Editor Preferences</a><br />
+    </p>
+
+    <div class="copyright"> 
+     <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif"
+        alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." /> 
+      </a>
+    </div>
 
   </body>
 </html>
