--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-3.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-3.htm
@@ -136,7 +136,6 @@
     </ol>
 
     
-<div class="copyright"> 
   <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
   <p> <a href="../concepts/concepts-3.htm">Java projects</a><br>
     <a href="../tasks/tasks-6.htm">Java 
@@ -151,9 +150,20 @@
     <a href="../tasks/tasks-45.htm">Using 
     the Package Explorer</a><br>
   </p>
-  <p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif"
-          alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border=0/> 
-    </a> </p>
+  
+    <p>
+      <img src="../images/ngrelr.gif" alt="Related reference" />
+    </p>
+
+    <p>
+      <a href="../reference/ref-121.htm">New Java Project Wizard</a><br />
+      <a href="../reference/ref-view-package-explorer.htm">Package Explorer View</a><br />
+    </p>
+
+<div class="copyright"> 
+  <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif"
+          alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved."/> 
+    </a>
 </div>
 
   </body>
