--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_manip.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_manip.htm
@@ -109,10 +109,10 @@ method. A shared working copy is thus keyed on the original compilation unit and
 The following shows how client 1 creates a shared working copy, client 2 retrieves this working copy, client 1 destroys the
 working copy, and client 2 trying to retrieve the shared working copy notices it does not exist any longer: </P>
 <font color='#4444CC'><pre>
-    // Client 1: Get original compilation unit
+    // Client 1 & 2: Get original compilation unit
     ICompilationUnit originalUnit = ...;
     
-    // Client 1: Get buffer factory
+    // Client 1 & 2: Get buffer factory
     IBufferFactory factory = ...;
     
     // Client 1: Create shared working copy
