--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-4.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-4.htm
@@ -44,7 +44,6 @@
     </div>
 
     
-<div class="copyright"> 
   <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
   <p> <a href="../tasks/tasks-6.htm">Java 
     views</a><br>
@@ -53,11 +52,20 @@
   </p>
   <p><a href="../tasks/tasks-45.htm">Using 
     the Package Explorer</a></p>
-  <p><br>
-    <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif"
-          alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border= 0/> 
-    </a> </p>
-  </div>
+
+    <p>
+      <img src="../images/ngrelr.gif" alt="Related reference" />
+    </p>
+
+    <p>
+      <a href="../reference/ref-view-package-explorer.htm">Package Explorer View</a><br />
+    </p>
+
+    <div class="copyright"> 
+      <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif"
+        alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." /> 
+      </a>
+    </div>
 
   </body>
 </html>
