--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-5.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-5.htm
@@ -740,8 +740,8 @@ while (Test.class.isAssignableFrom(superClass)) {
       </li>
     </ol>
 
+</div>
     
-  <div class="copyright"> 
     <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
     <p> <a href="../tasks/tasks-6.htm">Java 
       views</a><br>
@@ -768,15 +768,27 @@ while (Test.class.isAssignableFrom(superClass)) {
       <a href="../tasks/tasks-40.htm">Opening a type hierarchy on the current 
       text selection</a><br>
       <a href="../tasks/tasks-73.htm">Opening an editor for a selected element</a><br>
-      <br>
-      <br>
     </p>
+
+    <p>
+      <img src="../images/ngrelr.gif" alt="Related reference" />
+    </p>
+
+    <p>
+      <a href="../reference/ref-view-outline.htm">Java Outline View</a><br />
+      <a href="../reference/ref-143.htm">Java Content Assist</a><br />
+      <a href="../reference/ref-preferences-templates.htm">Templates Preferences</a><br />
+      <a href="../reference/ref-22.htm">Organize Imports Preferences</a><br />
+      <a href="../reference/ref-21.htm">Java Editor Preferences</a><br />
+      <a href="../reference/ref-154.htm">Extract Method Errors</a><br />
+      <a href="../reference/ref-type-hierarchy.htm">Type Hierarchy View</a><br />
+    </p>
+		
+  <div class="copyright"> 
     <p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif"
           alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border=0/> 
       </a> </p>
   </div>
-
-</div>
 
   </body>
 </html>
