*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_manip.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_manip.htm
@@ -313,10 +313,12 @@ For example, if you're only interested in listening for events before the builde
 There are three kinds of events that are supported by <b>JavaCore</b>:
 <ul>
 <li><a href="../reference/api/org/eclipse/jdt/core/ElementChangedEvent.html#POST_CHANGE"><b>POST_CHANGE</b></a>: 
-      Listeners of this event kind will get notified during the corresponding <b>POST_CHANGE</b> 
+      Listeners of this event kind will get notified during the corresponding 
+      <a HREF="../../org.eclipse.platform.doc.isv/reference/api/org/eclipse/core/resources/IResourceChangeEvent.html#POST_CHANGE"><b>POST_CHANGE</b></a> 
       resource change notification.</li>
 <li><a href="../reference/api/org/eclipse/jdt/core/ElementChangedEvent.html#PRE_AUTO_BUILD"><b>PRE_AUTO_BUILD</b></a>: 
-      Listeners of this event kind will get notified during the corresponding <b>PRE_AUTO_BUILD</b> 
+      Listeners of this event kind will get notified during the corresponding 
+      <a HREF="../../org.eclipse.platform.doc.isv/reference/api/org/eclipse/core/resources/IResourceChangeEvent.html#PRE_AUTO_BUILD"><b>PRE_AUTO_BUILD</b></a> 
       resource change notification.</li>
 <li><a href="../reference/api/org/eclipse/jdt/core/ElementChangedEvent.html#POST_RECONCILE"><b>POST_RECONCILE</b></a>: 
       Listeners of this event kind will get notified at the end of a reconcile operation on a working copy
