--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-80.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-80.htm
@@ -13,31 +13,30 @@ Refactoring</H1>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
 <p><a href="../concepts/concepts-9.htm">Refactoring support</a></p>
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"></p>
-<p><a href="../tasks/tasks-82.htm">Refactoring without 
-preview</a><br>
-<a href="../tasks/tasks-83.htm">Refactoring with 
-preview</a><br>
-<a href="../tasks/tasks-84.htm">Previewing 
-refactoring changes</a><br>
-<a href="../tasks/tasks-100.htm">Undoing a 
-refactoring operation</a><br>
-<a href="../tasks/tasks-101.htm">Redoing a 
-refactoring operation</a><br>
-<a href="../tasks/tasks-90.htm">Renaming a package</a><br>
-<a href="../tasks/tasks-92.htm">Renaming a 
-compilation unit</a><br>
-<a href="../tasks/tasks-85.htm">Copying and moving Java elements</a><br>
-<a href="../tasks/tasks-94.htm">Renaming a class, 
-field, or interface</a><br>
-<a href="../tasks/tasks-96.htm">Renaming a method</a><br>
-<a href="../tasks/tasks-98.htm">Renaming method 
-parameters</a><br>
-<a href="../tasks/tasks-58.htm">Managing import 
-statements</a><br>
-<a href="../tasks/tasks-59.htm">Adding required 
-import statements</a><br>
-<a href="../tasks/tasks-87.htm">Extracting a method</a></p>
-<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
+<p><a href="../tasks/tasks-82.htm">Refactoring without preview</a><br>
+  <a href="../tasks/tasks-83.htm">Refactoring with preview</a><br>
+  <a href="../tasks/tasks-84.htm">Previewing refactoring changes</a><br>
+  <a href="../tasks/tasks-100.htm">Undoing a refactoring operation</a><br>
+  <a href="../tasks/tasks-101.htm">Redoing a refactoring operation</a><br>
+</p>
+<p> <a href="tasks-85.htm">Copying and moving Java elements</a><br>
+  <a href="tasks-87.htm">Extracting a method</a><br>
+  <a href="tasks-90.htm">Renaming a package</a><br>
+  <a href="tasks-92.htm">Renaming a compilation unit</a><br>
+  <a href="tasks-94.htm">Renaming a class or interface</a><br>
+  <a href="tasks-96.htm">Renaming a method</a><br>
+  <a href="tasks-169.htm">Renaming a field</a><br>
+  <a href="tasks-204.htm">Renaming a local variable</a><br>
+  <a href="tasks-98.htm">Renaming method parameters</a><br>
+  <a href="tasks-159.htm">Reordering method parameters</a><br>
+  <a href="tasks-159.htm">Extracting a local variable</a><br>
+  <a href="tasks-161.htm">Inlining a local variable</a><br>
+  <a href="tasks-162.htm">Self encapsulating a field</a><br>
+  <a href="tasks-164.htm">Replacing a local variable with a query</a><br>
+  <a href="tasks-165.htm">Pulling members up to superclass</a><br>
+  <a href="tasks-167.htm">Moving static members between types</a><br>
+</p>
+<p> <img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
 <p><a href="../reference/ref-menu-refactor.htm">Refactoring 
 actions</a><br>
 <a href="../reference/ref-117.htm">Refactoring wizard</a><br>
