--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_search.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_search.htm
@@ -10,12 +10,12 @@
 <h2>
 Using the Java search engine</h2>
 <p> Your plug-in can use the JDT API to search Java projects in the workspace
-for java elements, such as method references, field declarations, implementors
+for Java elements, such as method references, field declarations, implementors
 of an interface, etc. </p>
 <p>
-The entry point for java search is the <b><a href="../reference/api/org/eclipse/jdt/core/search/SearchEngine.html">SearchEngine</a></b> class. Factory methods on this class, such
+The entry point for Java search is the <b><a href="../reference/api/org/eclipse/jdt/core/search/SearchEngine.html">SearchEngine</a></b> class. Factory methods on this class, such
 as <b><a href="../reference/api/org/eclipse/jdt/core/search/SearchEngine.html#createSearchPattern(org.eclipse.jdt.core.IJavaElement,%20int)">createSearchPattern</a></b> (creates
-a search pattern) or <b><a href="../reference/api/org/eclipse/jdt/core/search/SearchEngine.html#createJavaSearchScope(org.eclipse.jdt.core.IJavaElement%5B%5D,%20boolean)">createJavaSearchScope</a></b> (creates a java search scope) are used by the <b><a href="../reference/api/org/eclipse/jdt/core/search/SearchEngine.html#search(org.eclipse.core.resources.IWorkspace,%20org.eclipse.jdt.core.search.ISearchPattern,%20org.eclipse.jdt.core.search.IJavaSearchScope,%20org.eclipse.jdt.core.search.IJavaSearchResultCollector)">search</a></b>
+a search pattern) or <b><a href="../reference/api/org/eclipse/jdt/core/search/SearchEngine.html#createJavaSearchScope(org.eclipse.jdt.core.IJavaElement%5B%5D,%20boolean)">createJavaSearchScope</a></b> (creates a Java search scope) are used by the <b><a href="../reference/api/org/eclipse/jdt/core/search/SearchEngine.html#search(org.eclipse.core.resources.IWorkspace,%20org.eclipse.jdt.core.search.ISearchPattern,%20org.eclipse.jdt.core.search.IJavaSearchScope,%20org.eclipse.jdt.core.search.IJavaSearchResultCollector)">search</a></b>
 method. &nbsp;This method reports results to an  <b><a href="../reference/api/org/eclipse/jdt/core/search/IJavaSearchResultCollector.html">IJavaSearchResultCollector</a></b> which you must implement. </p>
 
 <h3>
@@ -24,10 +24,10 @@ Preparing for search</h3>
 of the search, and a scope for restraining the range of investigation. </p>
 
 <h4>
-Creating a java search pattern
+Creating a Java search pattern
 </h4>
 <p>
-A search pattern defines how search results are found. You can either create a search pattern from a java element (see
+A search pattern defines how search results are found. You can either create a search pattern from a Java element (see
 <b><a href="../reference/api/org/eclipse/jdt/core/search/SearchEngine.html#createSearchPattern(org.eclipse.jdt.core.IJavaElement, int)">createSearchPattern(IJavaElement, int)</a></b>) 
 or from a string (see <b><a href="../reference/api/org/eclipse/jdt/core/search/SearchEngine.html#createSearchPattern(java.lang.String, int, int, boolean)">createSearchPattern(String, int, int, boolean)</a></b>.)
 The last method supports wildcards (i.e. '*') and can be used to widen the search results.</p>
@@ -57,7 +57,7 @@ The following search patterns are supported:
 
 
 <h4>
-Creating a java search scope
+Creating a Java search scope
 </h4>
 <p>
 If you are interested in search results in a given project or even in a given package, or if you know that search results
