*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_search.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_search.htm
@@ -34,10 +34,19 @@ or from a string (see <b><a href="../reference/api/org/eclipse/jdt/core/search/S
 The last method supports wildcards (i.e. '*') and can be used to widen the search results.</p>
 <p>
 For example, creating a search pattern for searching for references to a given method is done as follows:</p>
-<font color="#4444cc"><pre>    // Get the method<br>    IMethod method = ...;<br><br>    // Create search pattern<br>    ISearchPattern pattern = SearchEngine.createSearchPattern(method, IJavaSearchConstants.REFERENCES);<br></pre></font>
+<font color="#4444cc"><pre>
+    // Get the method
+    IMethod method = ...;
+    
+    // Create search pattern
+    ISearchPattern pattern = SearchEngine.createSearchPattern(method, IJavaSearchConstants.REFERENCES);
+</pre></font>
 <p>
 Or creating a search pattern for searching for declarations of all types starting with "Obj":</p>
-<font color="#4444cc"><pre>    // Create search pattern<br>    ISearchPattern pattern = SearchEngine.createSearchPattern("Obj*", IJavaSearchConstants.TYPE, IJavaSearchConstants.DECLARATIONS, true);<br></pre></font>
+<font color="#4444cc"><pre>
+    // Create search pattern
+    ISearchPattern pattern = SearchEngine.createSearchPattern("Obj*", IJavaSearchConstants.TYPE, IJavaSearchConstants.DECLARATIONS, true);
+</pre></font>
 <p>
 The following search patterns are supported:
 </p><ul>
