*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_search.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_search.htm
@@ -76,13 +76,28 @@ can be only in a hierarchy of a given type, you can create the appropriate searc
 or <b><a href="../reference/api/org/eclipse/jdt/core/search/SearchEngine.html#createHierarchyScope(org.eclipse.jdt.core.IType)">createHierarchyScope(IType)</a></b>.</p>
 <p>
 For example, creating a search scope on a given package is done as follows:</p>
-<font color="#4444cc"><pre>    // Get the package<br>    IPackageFragment pkg = ...;<br><br>    // Create search scope<br>    IJavaSearchScope scope = SearchEngine.createJavaSearchScope(new IJavaElement[] {pkg});<br></pre></font>
+<font color="#4444cc"><pre>
+    // Get the package
+    IPackageFragment pkg = ...;
+
+    // Create search scope
+    IJavaSearchScope scope = SearchEngine.createJavaSearchScope(new IJavaElement[] {pkg});
+</pre></font>
 <p>
 Or creating a search scope on the hierarchy of a given type is:</p>
-<font color="#4444cc"><pre>    // Get the type<br>    IType type = ...;<br><br>    // Create search scope<br>    IJavaSearchScope scope = SearchEngine.createHierarchyScope(type);<br></pre></font>
+<font color="#4444cc"><pre>
+    // Get the type
+    IType type = ...;
+
+    // Create search scope
+    IJavaSearchScope scope = SearchEngine.createHierarchyScope(type);
+</pre></font>
 <p>
 Finally, you can create a search scope on the entire workspace:</p>
-<font color="#4444cc"><pre>    // Create search scope<br>    IJavaSearchScope scope = SearchEngine.createWorkspaceScope();<br></pre></font>
+<font color="#4444cc"><pre>
+    // Create search scope
+    IJavaSearchScope scope = SearchEngine.createWorkspaceScope();
+</pre></font>
 
 <h3>
 Searching</h3>
@@ -90,7 +105,20 @@ Searching</h3>
 Once you have created a search pattern and a search scope, and you have implemented 
 <b><a href="../reference/api/org/eclipse/jdt/core/search/IJavaSearchResultCollector.html">IJavaSearchResultCollector</a></b>,
 you can start a search query as follows: </p>
-<font color="#4444cc"><pre>    // Get the search pattern<br>    ISearchPattern pattern = ...;<br>    <br>    // Get the search scope<br>    IJavaSearchScope scope = ...;<br>    <br>    // Get the search result collector<br>    IJavaSearchResultCollector collector = ...;<br>    <br>    // Search<br>    SearchEngine searchEngine = new SearchEngine();<br>    searchEngine.search(ResourcesPlugin.getWorkspace(), pattern, scope, collector);<br></pre></font>
+<font color="#4444cc"><pre>
+    // Get the search pattern
+    ISearchPattern pattern = ...;
+
+    // Get the search scope
+    IJavaSearchScope scope = ...;
+
+    // Get the search result collector
+    IJavaSearchResultCollector collector = ...;
+
+    // Search
+    SearchEngine searchEngine = new SearchEngine();
+    searchEngine.search(ResourcesPlugin.getWorkspace(), pattern, scope, collector);
+</pre></font>
 <p>
 A notification that the search starts is sent to your search result collector using the
 <b><a href="../reference/api/org/eclipse/jdt/core/search/IJavaSearchResultCollector.html#aboutToStart()">aboutToStart</a></b>
