*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_search.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_search.htm
@@ -145,8 +145,10 @@ a local type declaration. Since the Java model doesn't represent local types, th
 declaration is given to the result collector. </p>
 <p>
 The search engine also tries to give the resource that contains the Java element to the result collector. So if the Java
-element is a method in a compilation unit, the resource is the corresponding <b>IFile</b>. If the element is contained in a
-.jar file, the resource is the .jar file, if this .jar file is in the workspace. If it is an external .jar file, then the resource is <b>null</b>. </p>
+element is a method in a compilation unit, the resource is the corresponding 
+<a HREF="../../org.eclipse.platform.doc.isv/reference/api/org/eclipse/core/resources/IFile.html"><b>IFile</b></a>. 
+If the element is contained in a .jar file, the resource is the .jar file, if this .jar file is in the workspace. If it is an external 
+.jar file, then the resource is <b>null</b>. </p>
 
 <h4>
 Source positions</h4>
