*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_options.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_options.htm
@@ -17,9 +17,9 @@ All of these APIs are located in <a href="../reference/api/org/eclipse/jdt/core/
 Only four methods are necessary to manipulate the options:
 <ul>
 <li><a href="../reference/api/org/eclipse/jdt/core/JavaCore.html#getDefaultOptions()">JavaCore.getDefaultOptions()</a> - Answers the default value of the options.</li>
-<li><a href="../reference/api/org/eclipse/jdt/core/JavaCore.html#getOption(java.lang.String)">JavaCore.getOption()</a> - Answers the value of a specific option.</li>
+<li><a href="../reference/api/org/eclipse/jdt/core/JavaCore.html#getOption(java.lang.String)">JavaCore.getOption(String optionName)</a> - Answers the value of a specific option.</li>
 <li><a href="../reference/api/org/eclipse/jdt/core/JavaCore.html#getOptions()">JavaCore.getOptions()</a> - Answers the current values of the options.</li>
-<li><a href="../reference/api/org/eclipse/jdt/core/JavaCore.html#setOptions(java.util.Hashtable)">JavaCore.setOptions()</a> - Replaces the options values by new values.</li>
+<li><a href="../reference/api/org/eclipse/jdt/core/JavaCore.html#setOptions(java.util.Hashtable)">JavaCore.setOptions(Hashtable newOptions)</a> - Replaces the options values by new values.</li>
 </ul>
 </P>
 
@@ -57,32 +57,7 @@ If you want to keep the current options and modify only one of them:
 
 <P>
 The list of all the JDT Core options are in the following tables. All of the tables have the same
-organisation with the option id surrounded with parenthesis and the default value printed in bold italics.
-<br>
-<br>
-<table BORDER CELLSPACING=2 CELLPADDING=2 COLS=2 WIDTH="100%" >
-
-<tr>
-<th>Description</th>
-<th width=130>Values</th>
-</tr>
-
-<tr>
-<td colspan=2><b>Option Name</b>   (OPTION_ID)</td>
-</tr>
-<tr valign="top">
-<td rowspan=3>Description</td>
-<td width=130>A_VALUE</td>
-</tr>
-<tr valign="top">
-<td width=130><b><i>DEFAULT_VALUE</i></b></td>
-</tr>
-<tr valign="top">
-<td width=130>ANOTHER_VALUE</td>
-</tr>
-
-</table>
-</P>
+organisation with the option id surrounded with parenthesis and the default value printed in bold italics. </P>
 
 <H4>Options category</h4>
 <ul>
