--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-103.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-103.htm
@@ -22,11 +22,11 @@ Open the Search dialog by either:</li>
 
 <ul>
 <li CLASS="Para">
-Clicking the&nbsp;<span CLASS="Label"><b>Search</span></b> button in the
+Clicking the&nbsp;<span CLASS="Label"><b>Search</b></span> button in the
 toolbar or</li>
 
 <li CLASS="Para">
-Pressing&nbsp;<span CLASS="Label"><b>Ctrl+H</span> </b>or</li>
+Pressing&nbsp;<span CLASS="Label"><b>Ctrl+H</b></span> or</li>
 
 <li CLASS="Para">
 Selecting <b>Search > Search</b> from the menu bar.</li>
@@ -36,7 +36,7 @@ Selecting <b>Search > Search</b> from the menu bar.</li>
 Select the <b>Java Search</b> tab.</li>
 
 <li CLASS="Para">
-In the&nbsp;<span CLASS="Label"><b>Search String</span></b> field, type
+In the&nbsp;<span CLASS="Label"><b>Search String</b></span> field, type
 the string for which you want to search, using wildcards as needed.</li>
 
 <li>
@@ -46,26 +46,28 @@ that previous search in the dialog.</li>
 
 <li CLASS="Para">
 Select the Java element type in the&nbsp;<span CLASS="Label"><b>Search
-For</span></b> area.</li>
+For</b></span> area.</li>
 
 <li CLASS="Para">
-Narrow your search in the&nbsp;<span CLASS="Label"><b>Limit To</span></b>
-area, or select&nbsp;<span CLASS="Label"><b>All occurrences</span></b>
+Narrow your search in the&nbsp;<span CLASS="Label"><b>Limit To</b></span>
+area, or select&nbsp;<span CLASS="Label"><b>All occurrences</b></span>
 to search for references and declarations to a Java element.</li>
 
 <li CLASS="Para">
-Optionally, use the&nbsp;<span CLASS="Label"><b>Scope</span></b> area to
+Optionally, use the&nbsp;<span CLASS="Label"><b>Scope</b></span> area to
 narrow the scope of your search.</li>
 
 <li CLASS="Para">
-Click&nbsp;<span CLASS="Label"><b>Search</span></b>, and the search is
+Click&nbsp;<span CLASS="Label"><b>Search</b></span>, and the search is
 carried out. The results are displayed in the Search view in the workbench
 window.</li>
 </ul>
 <img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 height=27 width=159>
 <p><a href="../concepts/concepts-8.htm">Java search</a>
 <p><img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 height=27 width=159>
-<p><a href="tasks-79.htm">Searching Java code</a>
+<p> <a href="tasks-103.htm">Conducting a Java search using the search dialog</a><br>
+  <a href="tasks-104.htm">Conducting a Java search using pop-up menus</a>
+<p><br>
 <p><img SRC="../images/ngrelr.gif" ALT="Related reference" NOSAVE BORDER=0 height=27 width=159>
 <p><a href="../reference/ref-131.htm">Java search tab</a>
 <br><a href="../reference/ref-menu-search.htm">Search menu</a>
