--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-10.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-10.htm
@@ -13,13 +13,11 @@
 <h1 CLASS="Head">
 Moving and copying Java elements</h1>
 
-<p class="Para">In this section, you will move a resource between Java
-packages.</p>
+<div class="Para">In this section, you will move a resource between Java
+packages.</div>
 
-<br>&nbsp;
 <table BORDER=0 CELLSPACING=0 CELLPADDING=3 >
-<caption><THEAD></THEAD><TBODY>
-<br></TBODY></caption>
+<caption>&nbsp;</caption>
 
 <tr>
 <td ALIGN=LEFT VALIGN=TOP>
@@ -60,11 +58,11 @@ removed to reflect its new location.</div>
 <div CLASS="Para">Using the context menu is an alternative to drag and
 drop:
 <br>Select the&nbsp;<span CLASS="Filename">MyTestCase.java</span> file
-and from its context menu, select <span class="Label">Refactor &gt; Move</span>. In the Move dialog,
-expand the hierarchy to browse the possible new locations for the resource.
-Select the&nbsp;<span CLASS="Filename">junit.framework</span> package,
-then click&nbsp;<span CLASS="Label">OK</span>. The class is moved, and
-its package declaration is updated to the new location.</div>
+and from its context menu, select&nbsp;<span class="Label">Refactor > Move</span>.
+In the Move dialog, expand the hierarchy to browse the possible new locations
+for the resource. Select the&nbsp;<span CLASS="Filename">junit.framework</span>
+package, then click&nbsp;<span CLASS="Label">OK</span>. The class is moved,
+and its package declaration is updated to the new location.</div>
 
 <div CLASS="Snapshot"><img SRC="../images/qs-46.gif" ALT="Move destination dialog" height=415 width=346></div>
 
@@ -77,24 +75,18 @@ statements are not updated when a compilation unit is moved.</div>
 </tr>
 </table>
 
-    
-<div class="copyright"> 
-  <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
-  <p><a href="../tasks/tasks-6.htm">Java views</a><br>
-    <a href="../concepts/concepts-9.htm">Refactoring support</a><br>
-    <a href="../concepts/ctemplates.htm"></a> </p>
-  <p> <img src="../images/ngrelt.gif" alt="Related tasks" border=0 height=27 width=159> 
-  </p>
-  <p> <a href="../tasks/tasks-80.htm">Refactoring</a><br>
-  <a href="../tasks/tasks-85.htm">Copying 
-    and moving Java elements</a><br>
-    <a href="../tasks/tasks-51.htm">Moving 
-    folders, packages and files</a><br>
-  </p>
-  <p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif"
-          alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border=0/> 
-    </a> </p>
-  </div>
+<div class="copyright"><img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 height=27 width=159>
+<p><a href="../tasks/tasks-6.htm">Java views</a>
+<br><a href="../concepts/concepts-9.htm">Refactoring support</a>
+<p><img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 height=27 width=159>
+<p><a href="../tasks/tasks-80.htm">Refactoring</a>
+<br><a href="../tasks/tasks-85.htm">Copying and moving Java elements</a>
+<br><a href="../tasks/tasks-51.htm">Moving folders, packages and files</a>
+<p><img SRC="../images/ngrelr.gif" ALT="Related reference" NOSAVE BORDER=0 height=27 width=159>
+<p><a href="../reference/ref-menu-refactor.htm">Refactoring actions</a>
+<br><a href="../reference/ref-117.htm">Refactoring wizard</a>
+<br><a href="../reference/ref-23.htm">Refactoring preferences</a>
+<p><a href="../hglegal2002.htm"><img SRC="../images/ngibmcpy2002.gif" ALT="Copyright IBM Corporation 2000, 2002. All Rights Reserved." BORDER=0 height=14 width=324></a></div>
 
 </body>
 </html>
