--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-6.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-6.htm
@@ -12,11 +12,11 @@
 <h1 CLASS="Head">
 Viewing the Type Hierarchy</h1>
 
-<p CLASS="Para">In this section, you will learn about using the Hierarchy
-view.</p>
+<div CLASS="Para">In this section, you will learn about using the Hierarchy
+view.</div>
 
 <table BORDER=0 CELLSPACING=0 CELLPADDING=3 >
-<caption><THEAD></THEAD><TBODY></TBODY></caption>
+<caption>&nbsp;</caption>
 
 <tr>
 <td ALIGN=LEFT VALIGN=TOP>
@@ -29,7 +29,8 @@ From its context menu, select&nbsp;<span CLASS="Label">Open Type Hierarchy</span
 You can also open type hierarchy view:
 <ul>
 <li>
-from the menu bar by selecting <span CLASS="Label">Navigate > Open Type Hierarchy</span>.&nbsp;</li>
+from the menu bar by selecting&nbsp;<span CLASS="Label">Navigate > Open
+Type Hierarchy</span>.&nbsp;</li>
 
 <li>
 from the keyboard by pressing F4 after selecting&nbsp;<span CLASS="Filename">TestCase.java</span>.&nbsp;</li>
@@ -96,9 +97,9 @@ button in the view toolbar.</div>
 </td>
 
 <td ALIGN=LEFT VALIGN=TOP>
-<div CLASS="Para">Click the&nbsp;<span CLASS="Label">Lock View and Show Members in Hierarchy</span> button
-in the toolbar of the member pane, then select
-the runTest() method in the member pane.</div>
+<div CLASS="Para">Click the&nbsp;<span CLASS="Label">Lock View and Show
+Members in Hierarchy</span> button in the toolbar of the member pane, then
+select the runTest() method in the member pane.</div>
 
 <div CLASS="Para">The view will now show all the types implementing runTest().</div>
 
@@ -113,8 +114,8 @@ the runTest() method in the member pane.</div>
 
 <td ALIGN=LEFT VALIGN=TOP>
 <div CLASS="Para">In the Hierarchy view, click the&nbsp;<span CLASS="Label">Show
-the Supertype Hierarchy</span> button. Then in the member pane, select countTestCases()
-to display the places where this method is overridden.</div>
+the Supertype Hierarchy</span> button. Then in the member pane, select
+countTestCases() to display the places where this method is overridden.</div>
 
 <div CLASS="Snapshot"><img SRC="../images/qs-33.gif" ALT="Supertype hierarchy showing method implementors" height=254 width=269></div>
 </td>
@@ -164,9 +165,9 @@ to see a menu or click on the button to edit the history list.
 </td>
 
 <td ALIGN=LEFT VALIGN=TOP>
-<div CLASS="Para">From the menu bar, select <span CLASS="Label">Window > Preferences</span>. Go to&nbsp;<span CLASS="Label">Java</span>
-and select&nbsp;<span CLASS="Label">Open a new Type Hierarchy Perspective</span>.
-Then click&nbsp;<span CLASS="Label">OK</span>.</div>
+<div CLASS="Para">From the menu bar, select&nbsp;<span CLASS="Label">Window
+> Preferences</span>. Go to&nbsp;<span CLASS="Label">Java</span> and select&nbsp;<span CLASS="Label">Open
+a new Type Hierarchy Perspective</span>. Then click&nbsp;<span CLASS="Label">OK</span>.</div>
 </td>
 </tr>
 
@@ -187,25 +188,19 @@ in the Java editor.&nbsp;
 you can have more than one type hierarchy in your workbench and switch
 between them as needed.&nbsp;
 <br>You can also configure whether a new perspective opens in a new window
-under <span class="Label">Window &gt; Preferences &gt; Workbench &gt; Perspectives</span>.</div>
+under&nbsp;<span class="Label">Window > Preferences > Workbench > Perspectives</span>.</div>
 </td>
 </tr>
 </table>
 
-    
-<div class="copyright"> 
-  <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
-  <p> <a href="../tasks/tasks-6.htm">Java 
-    views</a><br>
-  </p>
-  <p> <img src="../images/ngrelt.gif" alt="Related tasks" border=0 height=27 width=159> 
-  </p>
-  <p><a href="../tasks/tasks-37.htm">Using the Hierarchy view</a></p>
-  <p>&nbsp;</p>
-  <p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif"
-          alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border=0/> 
-    </a> </p>
-</div>
-    
+<div class="copyright"><img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 height=27 width=159>
+<p><a href="../concepts/concepts-7.htm">Java views</a>
+<p><img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 height=27 width=159>
+<p><a href="../tasks/tasks-37.htm">Using the Hierarchy view</a>
+<p><img SRC="../images/ngrelr.gif" ALT="Related reference" NOSAVE BORDER=0 height=27 width=159>
+<p><a href="../reference/ref-type-hierarchy.htm">Type Hierarchy view</a>
+<br><a href="../reference/ref-13.htm">Java Base preference page</a>
+<p><a href="../hglegal2002.htm"><img SRC="../images/ngibmcpy2002.gif" ALT="Copyright IBM Corporation 2000, 2002. All Rights Reserved." BORDER=0 height=14 width=324></a></div>
+
 </body>
 </html>
