--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-7.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-7.htm
@@ -10,7 +10,8 @@
 </head>
 <body bgcolor="#FFFFFF">
 
-<h1 CLASS="Head">Identifying problems in your code</h1>
+<h1 CLASS="Head">
+Identifying problems in your code</h1>
 
 <div class="Para">In this section, you will review the different indicators
 for identifying problems in your code.</div>
@@ -217,29 +218,18 @@ line will disappear as the correction is applied.</td>
 </tr>
 </table>
 
-    
-<div class="copyright"> 
-  <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
-  <p> <a href="../concepts/concepts-7.htm">Java editor</a><br>
-    <a href="../tasks/tasks-6.htm">Java 
-    views</a><br>
-    <a href="../concepts/concepts-4.htm">Java builder</a><br>
-  </p>
-  <p> <img src="../images/ngrelt.gif" alt="Related tasks" border=0 height=27 width=159> 
-  </p>
-  <p> <a href="../tasks/tasks-54.htm">Using 
-    the Java editor</a><br>
-    <a href="../tasks/tasks-69.htm">Viewing 
-    documentation and information</a><br>
-    <a href="../tasks/tasks-175.htm">Using 
-    QuickFix</a><br>
-  <a href="../tasks/tasks-106.htm">Building 
-    a Java program</a><br>
-  </p>
-  <p><a href="../hglegal2002.htm"> <img src="../images/ngibmcpy2002.gif"
-          alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border=0/> 
-    </a> </p>
-</div>
+<div class="copyright"><img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 height=27 width=159>
+<p><a href="../concepts/concepts-7.htm">Java editor</a>
+<br><a href="../tasks/tasks-6.htm">Java views</a>
+<br><a href="../concepts/concepts-4.htm">Java builder</a>
+<p><img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 height=27 width=159>
+<p><a href="../tasks/tasks-54.htm">Using the Java editor</a>
+<br><a href="../tasks/tasks-69.htm">Viewing documentation and information</a>
+<br><a href="../tasks/tasks-175.htm">Using QuickFix</a><a href="../tasks/tasks-106.htm"></a>
+<p><img SRC="../images/ngrelr.gif" ALT="Related reference" BORDER=0 id="_x0000_i1027" height=27 width=159>
+<p><a href="../reference/ref-21.htm">Editor preference page</a>
+<br><a href="../reference/ref-java-editor-quickfix.htm">Quick Fix</a><a href="../../../reference/ref-java-editor-quickfix.htm"></a>
+<p><a href="../hglegal2002.htm"><img SRC="../images/ngibmcpy2002.gif" ALT="Copyright IBM Corporation 2000, 2002. All Rights Reserved." BORDER=0 height=14 width=324></a></div>
 
 </body>
 </html>
