--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-8.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-8.htm
@@ -12,12 +12,11 @@
 <h1 CLASS="Head">
 Renaming Java elements</h1>
 
-<p CLASS="Para">In this section, you will rename a Java element using
-refactoring.</p>
+<div CLASS="Para">In this section, you will rename a Java element using
+refactoring.</div>
 
-<br>&nbsp;
 <table BORDER=0 CELLSPACING=0 CELLPADDING=3 >
-<caption><THEAD></THEAD><TBODY></TBODY></caption>
+<caption>&nbsp;</caption>
 
 <tr>
 <td ALIGN=LEFT VALIGN=TOP>
@@ -36,7 +35,7 @@ refactoring.</p>
 
 <td ALIGN=LEFT VALIGN=TOP>
 <div CLASS="Para">From its context menu, select&nbsp;<span CLASS="Label">Refactor
-&gt; Rename</span>.</div>
+> Rename</span>.</div>
 
 <div CLASS="Para">Refactoring actions change the structure of your code
 without changing its semantic behavior.</div>
@@ -128,27 +127,20 @@ undo buffer is cleared.</div>
 </tr>
 </table>
 
-    
-<div class="copyright"> <a href="../hglegal2002.htm"> </a>
-  <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
-  <p> <a href="../concepts/concepts-9.htm">Refactoring support</a></p>
-  <p> <img src="../images/ngrelt.gif" alt="Related tasks" border=0 height=27 width=159> 
-  </p>
-  <p><a href="../tasks/tasks-80.htm">Refactoring</a><br>
-  <a href="../tasks/tasks-92.htm">Renaming 
-    a compilation unit</a><br>
-   <a href="../tasks/tasks-82.htm">Refactoring 
-    without preview</a><br>
-    <a href="../tasks/tasks-83.htm">Refactoring 
-    with preview</a><br>
-    <a href="../tasks/tasks-84.htm">Previewing 
-    refactoring changes</a><br>
-    <a href="../tasks/tasks-100.htm">Undoing 
-    a refactoring operation</a><br>
-  </p>
-  <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif"
-          alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border=0/></a> 
-</div>
+<div class="copyright"><img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 height=27 width=159>
+<p><a href="../concepts/concepts-9.htm">Refactoring support</a>
+<p><img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 height=27 width=159>
+<p><a href="../tasks/tasks-80.htm">Refactoring</a>
+<br><a href="../tasks/tasks-92.htm">Renaming a compilation unit</a>
+<br><a href="../tasks/tasks-82.htm">Refactoring without preview</a>
+<br><a href="../tasks/tasks-83.htm">Refactoring with preview</a>
+<br><a href="../tasks/tasks-84.htm">Previewing refactoring changes</a>
+<br><a href="../tasks/tasks-100.htm">Undoing a refactoring operation</a><a href="../tasks/tasks-100.htm"></a>
+<p><img SRC="../images/ngrelr.gif" ALT="Related reference" NOSAVE BORDER=0 height=27 width=159>
+<p><a href="../reference/ref-menu-refactor.htm">Refactoring actions</a>
+<br><a href="../reference/ref-117.htm">Refactoring wizard</a>
+<br><a href="../reference/ref-23.htm">Refactoring preferences</a><a href="../../../reference/ref-23.htm"></a>
+<p><a href="../hglegal2002.htm"><img SRC="../images/ngibmcpy2002.gif" ALT="Copyright IBM Corporation 2000, 2002. All Rights Reserved." BORDER=0 height=14 width=324></a></div>
 
 </body>
 </html>
