--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-11.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-11.htm
@@ -12,17 +12,15 @@
 <h1 CLASS="Head">
 Searching the workbench</h1>
 
-<p class="Para">In this section, you will search the workbench for Java
-elements.
-</p>
+<div class="Para">In this section, you will search the workbench for Java
+elements.</div>
 
 
 <p class="Para">In the Search dialog, you can perform file, text or Java
-searches. Java searches operate on the structure of the code. With
-File Search you can search files by name and/or text content. Indexing
-makes Java searches faster, while searches on text content will allow you
-to find matches inside comments and strings.</p>
-
+searches. Java searches operate on the structure of the code. With File
+Search you can search files by name and/or text content. Indexing makes
+Java searches faster, while searches on text content will allow you to
+find matches inside comments and strings.
 <div CLASS="Topic">
 <h2>
 Performing a JDT search</h2>
@@ -37,7 +35,8 @@ Performing a JDT search</h2>
 
 <td ALIGN=LEFT VALIGN=TOP>
 <div CLASS="Para">In the Java perspective, click the&nbsp;<span CLASS="Label">Search</span>
-button in the workbench toolbar or use <span class="Label">Search &gt; Java</span> from the menu bar.</div>
+button in the workbench toolbar or use&nbsp;<span class="Label">Search
+> Java</span> from the menu bar.</div>
 </td>
 </tr>
 
@@ -135,7 +134,8 @@ to open it in an editor.</div>
 
 <td ALIGN=LEFT VALIGN=TOP>
 <div CLASS="Para">In the Outline view, select the fail(String) method,
-and from its context menu, select <span class="Label">References &gt; Workspace</span>.</div>
+and from its context menu, select&nbsp;<span class="Label">References >
+Workspace</span>.</div>
 
 <div CLASS="Snapshot"><img SRC="../images/qs-50.gif" ALT="Search context menu in Outline view" height=274 width=533></div>
 </td>
@@ -149,7 +149,8 @@ From an editor</h2>
 
 <div CLASS="Para">From the Package Explorer view, open&nbsp;<span CLASS="Filename">junit.framework.TestCase.java</span>.
 In the editor, select the class name&nbsp;<span CLASS="Filename">TestCase</span>
-and from the context menu, select <span class="Label">Search &gt; References &gt; Workspace</span>.</div>
+and from the context menu, select&nbsp;<span class="Label">Search > References
+> Workspace</span>.</div>
 
 <div CLASS="Figure"><img SRC="../images/qs-52.gif" ALT="Search context menu in editor" height=468 width=598>
 <div CLASS="FigureTitle">&nbsp;</div>
@@ -249,23 +250,18 @@ the current session.</div>
 menu or in the dialog to review the results of the selected search.</div>
 </div>
 
-    
-<div class="copyright"> 
-  <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
-  <p> <a href="../concepts/concepts-8.htm">Java 
-    search</a><br>
-  </p>
-  <p> <img src="../images/ngrelt.gif" alt="Related tasks" border=0 height=27 width=159> 
-  </p>
-  <p> <a href="../tasks/tasks-103.htm">Conducting 
-    a Java search using the search dialog</a><br>
-    <a href="../tasks/tasks-104.htm">Conducting 
-    a Java search using pop-up menus</a><br>
-  </p>
-  <p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif"
-          alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border=0/> 
-    </a> </p>
-  </div>
+<div class="copyright"><img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 height=27 width=159>
+<p><a href="../concepts/concepts-8.htm">Java search</a>
+<p><img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 height=27 width=159>
+<p><a href="../tasks/tasks-103.htm">Conducting a Java search using the
+search dialog</a>
+<br><a href="../tasks/tasks-104.htm">Conducting a Java search using pop-up
+menus</a>
+<p><img SRC="../images/ngrelr.gif" ALT="Related reference" NOSAVE BORDER=0 height=27 width=159>
+<p><a href="../reference/ref-menu-refactor.htm">Refactoring actions</a>
+<br><a href="../reference/ref-117.htm">Refactoring wizard</a>
+<br><a href="../reference/ref-23.htm">Refactoring preferences</a>
+<p><a href="../hglegal2002.htm"><img SRC="../images/ngibmcpy2002.gif" ALT="Copyright IBM Corporation 2000, 2002. All Rights Reserved." BORDER=0 height=14 width=324></a></div>
 
 </body>
 </html>
