--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-1.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-1.htm
@@ -3,7 +3,7 @@
 <meta http-equiv="Content-Style-Type" content="text/css">
 
 <link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1" type="text/css"><title>Overview</title></head><body bgcolor="#ffffff">
-<h1 class="Head">Overview</h1>This section gives you various tips which can make your live easier. The following areas are covered:<br>
+<h1 class="Head">Overview</h1>This section gives you various tips which can make your life easier. The following areas are covered:<br>
 <br>
 <a href="tips-2.htm">Templates </a>
 <br>
